T-12071 standardtotararesponsive: fixed page layout issue in rtl languages
Reviewed-on: https://review.totaralms.com/4709
Tested-by: Jenkins Automation <jenkins@totaralms.com>

--- a/theme/standardtotararesponsive/style/course.css
+++ b/theme/standardtotararesponsive/style/course.css
@@ -58,6 +58,12 @@
     min-height: 32px;
 }
 
+.dir-rtl .coursebox > .info > .coursename a,
+.dir-rtl .coursebox > .info > .name a {
+    padding-right:40px;
+    background-position:right top;
+}
+
 .coursebox .coursename {
     margin-bottom: 5px;
 }
